bitcoin_includedir = $(includedir)/bitcoin
bitcoin_include_HEADERS = \
    client.hpp

bitcoin_client_includedir = $(includedir)/bitcoin/client
bitcoin_client_include_HEADERS = \
    client/define.hpp \
    client/message_stream.hpp \
    client/obelisk_codec.hpp \
    client/sleeper.hpp \
    client/zeromq_socket.hpp \
    client/zmq.hpp
