bitcoin_includedir = $(includedir)/bitcoin
bitcoin_include_HEADERS = \
    client.hpp

bitcoin_client_includedir = $(includedir)/bitcoin/client
bitcoin_client_include_HEADERS = \
    client/define.hpp \
    client/random_number_generator.hpp \
    client/response_stream.hpp \
    client/request_stream.hpp \
    client/server_codec.hpp \
    client/server_codec_impl.hpp \
    client/sleeper.hpp \
    client/socket_stream.hpp \
    client/uniform_uint32_generator.hpp
